[package]
name = "see"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
ewasm = "0.2.3"
wrapper = { path = "wrapper" }
ease = { git = "https://github.com/quilt/ease.git", branch="master" }
bonsai = { git = "https://github.com/lightclient/bonsai.git", branch="master", default-features = false, features = ["u128"] }
interface = { path = "interface" }
oof = "0.1.1"
proof = { path = "proof" }
arrayref = "0.3.5"
hex = "0.3.2"
byteorder = "1.3.4"
