[package]
name = "see"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bonsai = { version = "0.2.1", default-features = false, features = ["u128"] }
ease = { git = "https://github.com/quilt/ease.git", branch="master" }
ewasm = "0.2.3"
hex = "0.3.2"
interface = { path = "interface" }
oof = "0.1.1"
proof = { path = "proof" }
see = { path = "ee", package = "ee" }
wrapper = { path = "wrapper" }
