[package]
name = "interface"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arborist = { version = "0.0.5", optional = true }
arrayref = "0.3.5"
bonsai = { path = "../../bonsai", default-features = false, features = ["u128"] }
oof = { path = "../../oof" }

[target.'cfg(feature = "generate")'.dependencies]
proof = { path = "../proof", features = ["generate"] }

[target.'cfg(not(feature = "generate"))'.dependencies]
proof = { path = "../proof" }

[features]
default = []
generate = ["arborist"]
