[package]
name = "proof"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arborist = { version = "0.0.5", optional = true }
bonsai = { git = "https://github.com/lightclient/bonsai.git", branch="master", default-features = false, features = ["u128"] }

[target.'cfg(feature = "generate")'.dependencies]
oof = { version = "0.1.1", features = ["generate"] }

[target.'cfg(not(feature = "generate"))'.dependencies]
oof = "0.1.1"


[features]
default = []
generate = ["arborist"]

